# multiagent-trading-system

./: .env.example  .gitignore  Dockerfile  LICENSE  PRD-1.md  README.md  deploy.ps1  docker-compose.yml  packages.txt  pyproject.toml  requirements-backend.txt  requirements-docker.txt  requirements.txt  vercel.json  vercel_app.py
.streamlit/: config.toml  secrets.toml.example
agents/: __init__.py  adaptive_agent.py  backtest_agent.py  compliance_agent.py  correlation_agent.py  decision_agent.py  execution_agent.py  global_market_agent.py  live_execution_agent.py  market_agent.py  ml_agent.py  news_agent.py  orchestrator.py  portfolio_agent.py  research_agent.py  risk_agent.py  sentiment_agent.py  strategy_builder.py  technical_strategy_agent.py  volatility_agent.py
api/: main.py
api/routes/: __init__.py  admin.py  analysis.py  auth.py  billing.py  engine.py  ibkr.py  live_trading.py  strategy.py  trading.py  ws.py
core/: auth.py  billing.py  config.py  llm.py  logging_config.py  order_management.py  risk_engine.py
engine/: __init__.py  backtest.py  indicators.py  portfolio.py  strategy.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/static/: index.html
memory/: db.py  vector_store.py
scheduler/: worker.py
tests/: test_market_agent.py  test_orchestrator.py  test_risk_agent.py
tools/: broker_base.py  broker_manager.py  ibkr_client.py  news_api.py  stock_api.py  web_financial.py  web_tools.py
tools/brokers/: __init__.py  cmc_broker.py  (+4 more)
ui/: streamlit_app.py
(+32 files in other folders)
